# quant-lab

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
benchmarks/: bench_indicators.py
examples/: plot_indicators.py  run_strategies.py
src/quantlab/: __init__.py  strategies.py
src/quantlab/backtest/: __init__.py  engine.py  metrics.py
src/quantlab/indicators/: __init__.py  _core.py  momentum.py  trend.py  volatility.py  volume.py
tests/: test_backtest.py  test_indicators.py  test_strategies.py
